--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     implementation group: 'org.jetbrains.kotlin', name: 'kotlin-stdlib-jdk8'
 
     implementation group: 'org.jsoup', name: 'jsoup', version: '1.11.3'
-    implementation group: 'com.google.code.gson', name: 'gson', version: '2.8.5'
+    implementation group: 'com.github.salomonbrys.kotson', name: 'kotson', version: '2.5.0'
     implementation group: 'com.github.axet', name: 'vget', version: '1.2.6'
 
     implementation group: 'no.tornado', name: 'tornadofx', version: '1.7.16'
